:bug: Fix target overflow

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -6,6 +6,7 @@
   height: 100vh;
   background: radial-gradient(circle at center, #444444, #000000);
   font-family: 'Roboto';
+  overflow: hidden;
 }
 
 .shooter .start{
